# handmade-hero

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  flake.nix
src/: main.cpp
src/lib/: CMakeLists.txt  lib.test.cpp
